<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_simpan">Simpan</string>
    <string name="menu_akun">Accounts</string>
    <string name="menu_transaksi">Transaction</string>

    <string name="title_category">Categories</string>
    <string name="title_setting">Setting</string>
    <string name="title_export_csv">Export CSV</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_minus">-</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_plus">+</string>
    <string name="number_dot">.</string>
    <string name="number_0">0</string>
    <string name="number_clear">CLR</string>
    <string name="number_submit">Save</string>
    <string name="number_equal">=</string>
    <string name="note">Note</string>

    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="invalid_format_used">Invalid format used.</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>

    <string name="source_google_drive">Google Drive</string>
    <string name="start_drive">Start Google Drive</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="status_logged_out">Logged Out</string>
    <string name="status_logged_in">Logged In</string>
    <string name="status_user_cancelled">User Cancelled</string>
    <string name="status_error">We found a problem: %1$s</string>
    <string name="not_open_file">Could not open file</string>
    <string name="local_backup">Local :</string>
    <string name="email">Email :</string>
    <string name="google_drive">Google Drive :</string>
    <string name="last_backup">Last Backup</string>
    <string name="info_backup">Back up your data to Google Drive.\nYou can restore them when you reinstall Spending.\nYour data will also back up to your phone\'s internal storage</string>
    <string name="google_drive_setting">Google Drive Setting</string>
    <string name="back_up_to_google_drive">Back Up to Google Drive</string>
</resources>