<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.CalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvExpression"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:elegantTextHeight="true"
            android:ellipsize="start"
            android:gravity="end"
            android:singleLine="false"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:scrollbars = "vertical"
            android:textColor="@color/number_action_button"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSeven"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_7" />

                <TextView
                    android:id="@+id/tvEight"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_8" />

                <TextView
                    android:id="@+id/tvNine"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_9" />

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/ActionButtonStyle"
                    android:text="16/11/20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFour"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_4" />

                <TextView
                    android:id="@+id/tvFive"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_5" />

                <TextView
                    android:id="@+id/tvSix"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_6" />

                <TextView
                    android:id="@+id/tvMinus"
                    style="@style/ActionButtonStyle"
                    android:text="@string/number_minus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOne"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_1" />

                <TextView
                    android:id="@+id/tvTwo"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_2" />

                <TextView
                    android:id="@+id/tvThree"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_3" />

                <TextView
                    android:id="@+id/tvPlus"
                    style="@style/ActionButtonStyle"
                    android:text="@string/number_plus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDot"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_dot" />

                <TextView
                    android:id="@+id/tvZero"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_0" />

                <TextView
                    android:id="@+id/tvBack"
                    style="@style/NumberButtonStyle"
                    android:text="@string/number_clear" />

                <TextView
                    android:id="@+id/tvEquals"
                    style="@style/OperatorButtonStyle"
                    android:text="@string/number_equal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>