<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTransactionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_constraintGuide_begin="300dp"
    tools:context=".ui.transaction.AddEditTransactionFragment">

    <RadioGroup
        android:id="@+id/radioGroupTransc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioExpense"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/radio_btn_expense_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="Expense"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioIncome"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/radio_btn_income_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="Income"
            android:textSize="16sp" />

    </RadioGroup>


    <TextView
        android:id="@+id/categoryName"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/textview_border"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelCategory"
        app:layout_constraintTop_toTopOf="@+id/labelCategory"
        tools:text="Category Not Selected" />

    <TextView
        android:id="@+id/labelCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:text="Category"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/categoryName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTransc" />

    <TextView
        android:id="@+id/dateTransaction"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/textview_border"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelDate"
        app:layout_constraintTop_toTopOf="@+id/labelDate"
        tools:text="26 Nov 2020" />

    <TextView
        android:id="@+id/labelDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:text="Date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/dateTransaction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCategory" />

    <TextView
        android:id="@+id/formula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:breakStrategy="balanced"
        android:gravity="end"
        android:singleLine="false"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1.8"
        android:gravity="end"
        android:singleLine="false"
        android:text="@string/number_0"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/noteTransc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noteTransc"
        style="@style/NumberButtonStyle"
        android:hint="@string/note"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.50" />

    <Button
        android:id="@+id/btn9"
        style="@style/NumberButtonStyle"
        android:text="@string/number_9"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn8"
        style="@style/NumberButtonStyle"
        android:text="@string/number_8"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn7"
        style="@style/NumberButtonStyle"
        android:text="@string/number_7"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn6"
        style="@style/NumberButtonStyle"
        android:text="@string/number_6"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn5"
        style="@style/NumberButtonStyle"
        android:text="@string/number_5"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn4"
        style="@style/NumberButtonStyle"
        android:text="@string/number_4"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn3"
        style="@style/NumberButtonStyle"
        android:text="@string/number_3"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn2"
        style="@style/NumberButtonStyle"
        android:text="@string/number_2"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn1"
        style="@style/NumberButtonStyle"
        android:text="@string/number_1"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnMinus"
        style="@style/NumberButtonStyle"
        android:text="@string/number_minus"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnMultiply"
        style="@style/NumberButtonStyle"
        android:text="*"
        android:textAlignment="center"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDivide"
        app:layout_constraintTop_toTopOf="@+id/btnDivide"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnDivide"
        style="@style/NumberButtonStyle"
        android:text="/"
        android:textAlignment="center"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/noteTransc"
        app:layout_constraintTop_toTopOf="@+id/noteTransc"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnPlus"
        style="@style/NumberButtonStyle"
        android:text="@string/number_plus"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnEquals"
        style="@style/NumberButtonStyle"
        android:text="@string/number_equal"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintTop_toTopOf="@+id/btnDecimal"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnDecimal"
        style="@style/NumberButtonStyle"
        android:text="@string/number_dot"
        android:textAlignment="center"
        android:textSize="36sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toTopOf="@+id/btn_0"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_0"
        style="@style/NumberButtonStyle"
        android:text="@string/number_0"
        android:textAlignment="center"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDecimal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnClear"
        style="@style/NumberButtonStyle"
        android:text="@string/number_clear"
        android:textAlignment="center"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9"
        app:layout_constraintWidth_percent="0.25" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnClear,btnDivide,btnMultiply,btnEquals,btnMinus,btnPlus,btnDecimal,btn9,btn8,btn7,btn6,btn5,btn4,btn3,btn2,btn1,btn_0" />


</androidx.constraintlayout.widget.ConstraintLayout>